// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Actor component renders when active 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#aaa",
      "borderColor": "#fff",
      "borderWidth": 5,
      "flexDirection": "row",
      "height": 60,
      "justifyContent": "space-evenly",
      "padding": 10,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 18,
        "textAlign": "center",
        "width": 60,
      }
    }
  >
    30
  </Text>
  <Text
    style={
      Object {
        "flex": 1,
        "fontSize": 18,
        "paddingLeft": 15,
        "textAlign": "left",
      }
    }
  >
    Test Actor
  </Text>
</View>
`;

exports[`the Actor component renders when non active 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#eee",
      "borderColor": "#fff",
      "borderWidth": 5,
      "flexDirection": "row",
      "height": 45,
      "justifyContent": "space-evenly",
      "padding": 10,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 18,
        "textAlign": "center",
        "width": 60,
      }
    }
  >
    30
  </Text>
  <Text
    style={
      Object {
        "flex": 1,
        "fontSize": 18,
        "paddingLeft": 15,
        "textAlign": "left",
      }
    }
  >
    Test Actor
  </Text>
</View>
`;
